add pdfs of images

--- a/embeddedlinux.tex
+++ b/embeddedlinux.tex
@@ -34,7 +34,7 @@
 \usepackage{tikz}
 \usepackage{bm}
 \usepackage{listings}
-\usepackage{hyperref}
+\usepackage{hyperref} %always the last to avoid problems
 
 
 \usebackgroundtemplate{
@@ -89,15 +89,15 @@
 \input{trainingmaterials/slides/sysdev-toolchains-obtaining/sysdev-toolchains-obtaining}
 \input{trainingmaterials/slides/sysdev-bootloaders-title/sysdev-bootloaders-title}
 \input{trainingmaterials/slides/sysdev-bootloaders-sequence/sysdev-bootloaders-sequence}
-\input{trainingmaterials/slides/sysdev-linux-intro-title/sysdev-linux-intro-title}
-\input{trainingmaterials/slides/sysdev-linux-intro-features/sysdev-linux-intro-features}
-\input{trainingmaterials/slides/sysdev-linux-intro-versioning/sysdev-linux-intro-versioning}
-\input{trainingmaterials/slides/sysdev-linux-intro-sources/sysdev-linux-intro-sources}
-\input{trainingmaterials/slides/sysdev-kernel-building/sysdev-kernel-building}
-\input{trainingmaterials/slides/sysdev-kernel-booting/sysdev-kernel-booting}
-\input{trainingmaterials/slides/sysdev-root-filesystem-title/sysdev-root-filesystem-title}
-\input{trainingmaterials/slides/sysdev-root-filesystem-principles/sysdev-root-filesystem-principles}
-\input{trainingmaterials/slides/sysdev-root-filesystem-contents/sysdev-root-filesystem-contents}
+%\input{trainingmaterials/slides/sysdev-linux-intro-title/sysdev-linux-intro-title}
+%\input{trainingmaterials/slides/sysdev-linux-intro-features/sysdev-linux-intro-features}
+%\input{trainingmaterials/slides/sysdev-linux-intro-versioning/sysdev-linux-intro-versioning}
+%\input{trainingmaterials/slides/sysdev-linux-intro-sources/sysdev-linux-intro-sources}
+%\input{trainingmaterials/slides/sysdev-kernel-building/sysdev-kernel-building}
+%\input{trainingmaterials/slides/sysdev-kernel-booting/sysdev-kernel-booting}
+%\input{trainingmaterials/slides/sysdev-root-filesystem-title/sysdev-root-filesystem-title}
+%\input{trainingmaterials/slides/sysdev-root-filesystem-principles/sysdev-root-filesystem-principles}
+%\input{trainingmaterials/slides/sysdev-root-filesystem-contents/sysdev-root-filesystem-contents}
 
 
 
