--- a/trainingmaterials/slides/sysdev-kernel-building/sysdev-kernel-building.tex
+++ b/trainingmaterials/slides/sysdev-kernel-building/sysdev-kernel-building.tex
@@ -62,7 +62,7 @@
 
 \begin{frame}[fragile]
   \frametitle{Choosing a compiler}
-  The compiler invoked by the kernel Makefile is \code{$(CROSS_COMPILE)gcc}
+  The compiler invoked by the kernel Makefile is \code{\$(CROSS_COMPILE)gcc}
   \begin{itemize}
     \item Specifying the compiler is already needed at configuration
 	  time, as some kernel configuration options depend on the
