--- a/embeddedlinux.tex
+++ b/embeddedlinux.tex
@@ -49,7 +49,7 @@
 \date[01/15/2025]{January 15, 2025}
 
 \institute[UPM] % (optional, but mostly needed)
-{\emph{Professor}, ETSI Sistemas de Telecomunicación \\
+{\emph{Professor}, ETSI Sistemas de Telecomunicación Copiado de Bootlin \\
  \includegraphics[scale=0.60]{UPM-logo.png} \\ [0.0 cm]
  }
 
