--- a/embeddedlinux.tex
+++ b/embeddedlinux.tex
@@ -34,6 +34,7 @@
 \usepackage{tikz}
 \usepackage{bm}
 \usepackage{listings}
+\usepackage{minted}
 \usepackage{hyperref} %always the last to avoid problems
 
 
@@ -96,7 +97,7 @@
 \input{trainingmaterials/slides/sysdev-linux-intro-features/sysdev-linux-intro-features}
 \input{trainingmaterials/slides/sysdev-linux-intro-versioning/sysdev-linux-intro-versioning}
 \input{trainingmaterials/slides/sysdev-linux-intro-sources/sysdev-linux-intro-sources}
-%\input{trainingmaterials/slides/sysdev-kernel-building/sysdev-kernel-building}
+\input{trainingmaterials/slides/sysdev-kernel-building/sysdev-kernel-building}
 %\input{trainingmaterials/slides/sysdev-kernel-booting/sysdev-kernel-booting}
 %\input{trainingmaterials/slides/sysdev-root-filesystem-title/sysdev-root-filesystem-title}
 %\input{trainingmaterials/slides/sysdev-root-filesystem-principles/sysdev-root-filesystem-principles}
