--- a/embeddedlinux.tex
+++ b/embeddedlinux.tex
@@ -98,8 +98,8 @@
 \input{trainingmaterials/slides/sysdev-linux-intro-versioning/sysdev-linux-intro-versioning}
 \input{trainingmaterials/slides/sysdev-linux-intro-sources/sysdev-linux-intro-sources}
 \input{trainingmaterials/slides/sysdev-kernel-building/sysdev-kernel-building}
-%\input{trainingmaterials/slides/sysdev-kernel-booting/sysdev-kernel-booting}
-%\input{trainingmaterials/slides/sysdev-root-filesystem-title/sysdev-root-filesystem-title}
+\input{trainingmaterials/slides/sysdev-kernel-booting/sysdev-kernel-booting}
+\input{trainingmaterials/slides/sysdev-root-filesystem-title/sysdev-root-filesystem-title}
 %\input{trainingmaterials/slides/sysdev-root-filesystem-principles/sysdev-root-filesystem-principles}
 %\input{trainingmaterials/slides/sysdev-root-filesystem-contents/sysdev-root-filesystem-contents}
 
