Updates from Overleaf

--- a/embeddedlinux.tex
+++ b/embeddedlinux.tex
@@ -79,6 +79,7 @@
 \newcommand\kdir[1]{\projdir{linux}{#1}}
 \newcommand\kfile[1]{\projfile{linux}{#1}}
 \newcommand\kdochtml[1]{\href{https://www.kernel.org/doc/html/latest/#1.html}{\codelink{#1}}}
+\newcommand\kdochtmldir[1]{\href{https://www.kernel.org/doc/html/latest/#1/}{\codelink{#1/}}}
 
 \begin{document}
 
@@ -109,9 +110,9 @@
 \input{trainingmaterials/slides/sysdev-kernel-booting/sysdev-kernel-booting}
 \input{trainingmaterials/slides/sysdev-root-filesystem-title/sysdev-root-filesystem-title}
 \input{trainingmaterials/slides/sysdev-root-filesystem-principles/sysdev-root-filesystem-principles}
-%\input{trainingmaterials/slides/sysdev-root-filesystem-contents/sysdev-root-filesystem-contents}
-
-
+\input{trainingmaterials/slides/sysdev-root-filesystem-contents/sysdev-root-filesystem-contents}
+\input{trainingmaterials/slides/sysdev-root-filesystem-virtual-fs/sysdev-root-filesystem-virtual-fs}
+\input{trainingmaterials/slides/boot-sequence-initramfs/boot-sequence-initramfs}
 
 \begin{frame}{Conclusion}
 \begin{enumerate}
