Updates from Overleaf

--- a/embeddedlinux.tex
+++ b/embeddedlinux.tex
@@ -78,6 +78,8 @@
 \newcommand\kconfigval[2]{\href{https://elixir.bootlin.com/linux/latest/K/ident/#1}{\codelink{#1=#2}}}
 \newcommand\kdir[1]{\projdir{linux}{#1}}
 \newcommand\kfile[1]{\projfile{linux}{#1}}
+\newcommand\kfileversion[2]{\href{https://elixir.bootlin.com/linux/v#2/source/#1}{\codelink{#1}}}
+\newcommand\kstruct[1]{\href{https://elixir.bootlin.com/linux/latest/ident/#1}{\codelink{struct #1}}}
 \newcommand\kdochtml[1]{\href{https://www.kernel.org/doc/html/latest/#1.html}{\codelink{#1}}}
 \newcommand\kdochtmldir[1]{\href{https://www.kernel.org/doc/html/latest/#1/}{\codelink{#1/}}}
 
@@ -113,6 +115,9 @@
 \input{trainingmaterials/slides/sysdev-root-filesystem-contents/sysdev-root-filesystem-contents}
 \input{trainingmaterials/slides/sysdev-root-filesystem-virtual-fs/sysdev-root-filesystem-virtual-fs}
 \input{trainingmaterials/slides/boot-sequence-initramfs/boot-sequence-initramfs}
+\input{trainingmaterials/slides/sysdev-busybox/sysdev-busybox}
+\input{trainingmaterials/slides/sysdev-hw-devices/sysdev-hw-devices}
+
 
 \begin{frame}{Conclusion}
 \begin{enumerate}
