Add bootint part

--- a/embeddedlinux.tex
+++ b/embeddedlinux.tex
@@ -22,6 +22,7 @@
 \useinnertheme{rounded}
 \setbeamertemplate{navigation symbols}{}
 \setbeamerfont{structure}{family=\rmfamily,series=\bfseries}
+\setbeamerfont{footline}{size=\tiny}
 \usefonttheme[stillsansseriftext]{serif}
 
 \usepackage{amsmath}
@@ -119,25 +120,6 @@
 \input{trainingmaterials/slides/sysdev-hw-devices/sysdev-hw-devices}
 
 
-\begin{frame}{Conclusion}
-\begin{enumerate}
-\item Contribution of this dissertation into the field of Statistics.
-\end{enumerate}
-\end{frame}
-
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{References}
-\footnotesize{
-\begin{thebibliography}{99} % Beamer does not support BibTeX so references must be inserted manually as below
-\bibitem[Smith, 2012]{p1} John Doe (2012)
-\newblock Title of the Publication
-\newblock \emph{Journal Name} 1(1), 11 -- 111.
-\end{thebibliography}
-}
-\end{frame}
 
 %------------------------------------------------
 
