--- a/trainingmaterials/slides/kernel-hw-devices/kernel-hw-devices.tex
+++ b/trainingmaterials/slides/kernel-hw-devices/kernel-hw-devices.tex
@@ -1,4 +1,4 @@
-\section{Describing hardware devices}
+\section[HW-Devices]{Describing hardware devices}
 
 \subsection{Discoverable hardware: USB and PCI}
 
