--- a/trainingmaterials/slides/sysdev-cross-compiling-user-space/sysdev-cross-compiling-user-space.tex
+++ b/trainingmaterials/slides/sysdev-cross-compiling-user-space/sysdev-cross-compiling-user-space.tex
@@ -1,4 +1,4 @@
-\section{Cross-compiling user-space libraries and applications}
+\section[CROSS]{Cross-compiling user-space libraries and applications}
 
 \begin{frame}{Integrating user-space libraries and applications}
   \begin{itemize}
