--- a/trainingmaterials/slides/sysdev-intro/sysdev-intro.tex
+++ b/trainingmaterials/slides/sysdev-intro/sysdev-intro.tex
@@ -1,4 +1,4 @@
-\section{Introduction to Embedded Linux}
+\section[EL]{Introduction to Embedded Linux}
 
 \begin{frame}
   \frametitle{Birth of Free Software}
