--- a/trainingmaterials/slides/sysdev-dev-environment/sysdev-dev-environment.tex
+++ b/trainingmaterials/slides/sysdev-dev-environment/sysdev-dev-environment.tex
@@ -1,4 +1,4 @@
-\section{Embedded Linux development environment}
+\section[ELdev]{Embedded Linux development environment}
 
 \begin{frame}
   \frametitle{Embedded Linux solutions}
